<resources>
    <string name="bt_default_action_label">Purchase</string>
    <string name="bt_form_hint_card_number">Card Number</string>
    <string name="bt_form_hint_cvv">CVV</string>
    <string name="bt_form_hint_expiration">Expiration</string>
    <string name="bt_form_hint_postal_code">Postal Code</string>
    <string name="bt_add_new_payment_method">Add New Payment Method</string>
    <string name="bt_add_payment_method">Add Payment Method</string>
    <string name="bt_card_descriptor">ends in %s</string>
    <string name="bt_change_payment_method">Change Payment Method</string>
    <string name="bt_choose_payment_method">Choose Payment Method</string>
    <string name="bt_default_action_bar_text">Purchase</string>
    <string name="bt_default_submit_button_text">PURCHASE</string>
    <string name="bt_descriptor_amex">Amex</string>
    <string name="bt_descriptor_diners">Diners</string>
    <string name="bt_descriptor_discover">Discover</string>
    <string name="bt_descriptor_jcb">JCB</string>
    <string name="bt_descriptor_maestro">Maestro</string>
    <string name="bt_descriptor_mastercard">MasterCard</string>
    <string name="bt_descriptor_paypal">PayPal</string>
    <string name="bt_descriptor_unknown">Card</string>
    <string name="bt_descriptor_visa">Visa</string>
    <string name="bt_form_pay_with_card_header">Pay With a Card</string>
    <string name="bt_invalid_card">Card information is invalid</string>
    <string name="bt_pay_with_paypal">Pay with PayPal</string>
    <string name="bt_pay_with_venmo">Pay with Venmo</string>
    <string name="bt_descriptor_android_pay">Google Wallet</string>
    <string name="bt_pay_with_android_pay">Pay with Google Wallet</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="ga_trackingId">UA-38357823-1</string>
    <string name="app_name">ALTff</string>
    <string name="code_name">altff</string>
    <string name="map_api_key_v2">AIzaSyDzZuCPgzPydYi76iL3YlglTXXLTybOyZY</string>
    <string name="plus_example_deep_link_id">/+/mobile/android/</string>
    <string name="plus_example_deep_link_url">https://developers.google.com/+/mobile/android/</string>
    <string name="release">Feature</string>
    <string name="sandbox">Dev</string>
    <string name="staging">Staging</string>
    <string name="production">Production</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="accounts">Accounts</string>
    <string name="activity">Activity</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="add_caption">Add a caption</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_note">Add Note</string>
    <string name="add_score">Add Score</string>
    <string name="album">Album</string>
    <string name="albums">Albums</string>
    <string name="alert">Alert</string>
    <string name="all">All</string>
    <string name="all_tracks_title">All Tracks</string>
    <string name="almost_there">Almost there...</string>
    <string name="always_on">Always On</string>
    <string name="amount_label">Check Total</string>
    <string name="anonymous_user">Anonymous Android user</string>
    <string name="anonymous_ios_user">Anonymous iOS user</string>
    <string name="app_not_being_maintained">This app is no longer being maintained due to non-payment on behalf of the business.</string>
    <string name="app_store">App Store:</string>
    <string name="artist">Artist</string>
    <string name="attend">Attend</string>
    <string name="audio">Audio</string>
    <string name="authentication">Authentication</string>
    <string name="author">Author</string>
    <string name="black">Black</string>
    <string name="blocked_day">"We're not opened on this day."</string>
    <string name="blue">Blue</string>
    <string name="book_it">Book It</string>
    <string name="booking_successful">Booking was done successfully</string>
    <string name="branch_call_title">Which location would you like to call?</string>
    <string name="branch_directions_title">Which location would you like directions to?</string>
    <string name="calculate">Calculate</string>
    <string name="calendar_sunday">Sun</string>
    <string name="calendar_monday">Mon</string>
    <string name="calendar_tuesday">Tue</string>
    <string name="calendar_wednesday">Wed</string>
    <string name="calendar_thursday">Thu</string>
    <string name="calendar_friday">Fri</string>
    <string name="calendar_saturday">Sat</string>
    <string name="call_number_request">Do you want to call this number?</string>
    <string name="call_us">Call Us</string>
    <string name="cancel">Cancel</string>
    <string name="choose_login_account">Choose Login Account</string>
    <string name="chose_from_library">Choose from Library</string>
    <string name="create_account">Create Account</string>
    <string name="current_game">Current Game</string>
    <string name="demo_title">Enter the code you have been given below to view a demo</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="google_plus">Google+</string>
    <string name="hours">hours</string>
    <string name="load_demo">Load Demo</string>
    <string name="login">Log In</string>
    <string name="main_menu">Main Menu</string>
    <string name="mins">mins</string>
    <string name="new_game">New Game</string>
    <string name="notes">Notes</string>
    <string name="overview">Overview</string>
    <string name="password">Password</string>
    <string name="players">Players</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="save_to_album">Save to Photo Album</string>
    <string name="set_timer">Set Timer</string>
    <string name="share_by_email">Share by Email</string>
    <string name="share_by_sms">Share by SMS</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_google_plus">Share on Google+</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="take_photo">Take a Photo</string>
    <string name="title">Title</string>
    <string name="twitter">Twitter</string>
</resources>