<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="center" android:orientation="vertical" android:background="#ff000000" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/share_by_email_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="7.0dip" android:text="@string/share_by_email" style="@style/CommonButtonStyle" />
        <Button android:id="@id/share_by_sms_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="7.0dip" android:text="@string/share_by_sms" style="@style/CommonButtonStyle" />
        <Button android:id="@id/share_on_facebook_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="7.0dip" android:text="@string/share_on_facebook" style="@style/CommonButtonStyle" />
        <Button android:id="@id/share_on_twitter_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="7.0dip" android:text="@string/share_on_twitter" style="@style/CommonButtonStyle" />
        <Button android:id="@id/share_by_google_plus_button" android:background="@drawable/default_button_long_spotted" android:visibility="gone" android:layout_width="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="7.0dip" android:text="@string/share_on_google_plus" style="@style/CommonButtonStyle" />
        <Button android:id="@id/save_to_photo_album" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/save_to_album" style="@style/CommonButtonStyle" />
    </LinearLayout>
</ScrollView>