<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/listView" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/tvCurrentGame" android:padding="@dimen/common_padding_small2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/current_game" android:drawableLeft="@drawable/ic_current_game" android:drawablePadding="@dimen/common_padding_small1" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/tvNewGame" android:padding="@dimen/common_padding_small2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/new_game" android:drawableLeft="@drawable/ic_new_game" android:drawablePadding="@dimen/common_padding_small1" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/tvNotes" android:padding="@dimen/common_padding_small2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/notes" android:drawableLeft="@drawable/ic_notes" android:drawablePadding="@dimen/common_padding_small1" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/tvPlayers" android:padding="@dimen/common_padding_small2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/players" android:drawableLeft="@drawable/ic_menu_players" android:drawablePadding="@dimen/common_padding_small1" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/tvOverview" android:padding="@dimen/common_padding_small2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/overview" android:drawableLeft="@drawable/ic_overview" android:drawablePadding="@dimen/common_padding_small1" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/tvMainMenu" android:padding="@dimen/common_padding_small2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/main_menu" android:drawableLeft="@drawable/ic_main_menu" android:drawablePadding="@dimen/common_padding_small1" />
</LinearLayout>