<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:id="@id/choose_accounts_content" android:background="@drawable/tell_friend_dialog_background" android:padding="2.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:id="@id/choose_account_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" android:text="@string/choose_login_account" style="@style/BigWhiteText" />
    <Button android:id="@id/add_via_facebook_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="3.0dip" android:text="@string/facebook" style="@style/CommonButtonStyle" />
    <Button android:id="@id/add_via_twitter_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="3.0dip" android:text="@string/twitter" style="@style/CommonButtonStyle" />
    <Button android:id="@id/add_via_google_plus_button" android:background="@drawable/default_button_long_spotted" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="3.0dip" android:text="@string/google_plus" style="@style/CommonButtonStyle" />
    <Button android:id="@id/add_via_email_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="3.0dip" android:text="@string/email" style="@style/CommonButtonStyle" />
    <Button android:id="@id/cancel_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="15.0dip" android:text="@string/cancel" style="@style/CommonButtonStyle" />
</LinearLayout>