<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/preview_gradient" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/preview_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/ordinary_text_size" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/demo_title_textview" android:visibility="gone" android:layout_width="@dimen/ordinary_button_width" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/preview_margin_bottom" android:text="@string/demo_title" />
        <EditText android:textSize="@dimen/ordinary_text_size" android:textColor="#ffffffff" android:textColorHint="#ffffffff" android:layout_gravity="center" android:id="@id/demo_code_edittext" android:layout_width="@dimen/ordinary_button_width" android:layout_height="@dimen/button_optimal_height" android:hint="@string/email" android:singleLine="true" android:inputType="textNoSuggestions" android:imeOptions="actionNext" />
        <EditText android:textSize="@dimen/ordinary_text_size" android:textColor="#ffffffff" android:textColorHint="#ffffffff" android:layout_gravity="center" android:id="@id/password_edittext" android:layout_width="@dimen/ordinary_button_width" android:layout_height="@dimen/button_optimal_height" android:layout_marginBottom="@dimen/preview_margin_bottom" android:hint="@string/password" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionGo" />
        <Button android:layout_gravity="center" android:id="@id/load_demo_button" android:background="@drawable/medium_button_long_spotted_bright" android:layout_width="@dimen/ordinary_button_width" android:layout_height="@dimen/button_optimal_height" android:layout_marginBottom="@dimen/preview_margin_bottom" android:text="@string/load_demo" style="@style/CommonButtonStyle" />
        <Button android:layout_gravity="center" android:id="@id/reset_demo_button" android:background="@drawable/medium_button_long_spotted_bright" android:layout_width="@dimen/ordinary_button_width" android:layout_height="@dimen/button_optimal_height" android:text="@string/reset" style="@style/CommonButtonStyle" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/ordinary_text_size" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/app_version_textview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:id="@id/buttons_container" android:background="#50aaaaaa" android:layout_width="fill_parent" android:layout_height="@dimen/button_height">
                <Button android:id="@id/staging_button" android:background="@drawable/top_tab_src" android:layout_width="0.0dip" android:text="@string/staging" android:layout_weight="1.0" style="@style/TabButtonStyle" />
                <Button android:id="@id/sandbox_button" android:background="@drawable/top_tab_src" android:layout_width="0.0dip" android:text="@string/sandbox" android:layout_weight="1.0" style="@style/TabButtonStyle" />
                <Button android:id="@id/production_button" android:background="@drawable/top_tab_src" android:layout_width="0.0dip" android:text="@string/production" android:layout_weight="1.0" style="@style/TabButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>