<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/list_view_root" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include layout="@layout/tab_title_bar" />
        <include layout="@layout/ads_layout" />
    </LinearLayout>
    <TextView android:gravity="right" android:id="@id/create_account_textview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginRight="20.0dip" android:text="@string/create_account" style="@style/CommonButtonStyle" />
    <LinearLayout android:orientation="vertical" android:id="@id/login_container" android:background="@drawable/reservation_login_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="95.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip">
        <EditText android:textColor="#ff000000" android:textColorHint="@color/text_hint_color" android:layout_gravity="top" android:id="@id/user_email_text" android:background="@null" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/email" android:inputType="textEmailAddress" style="@style/OrdinaryText" />
        <EditText android:textColor="#ff000000" android:textColorHint="@color/text_hint_color" android:layout_gravity="bottom" android:id="@id/user_password_text" android:background="@null" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:hint="@string/password" android:inputType="textPassword" style="@style/OrdinaryText" />
    </LinearLayout>
    <Button android:layout_gravity="center_horizontal" android:id="@id/reservation_login_button" android:background="@drawable/medium_button_long" android:layout_width="fill_parent" android:layout_height="@dimen/big_button_height" android:layout_marginLeft="@dimen/reservation_main_button_margin" android:layout_marginTop="20.0dip" android:layout_marginRight="@dimen/reservation_main_button_margin" android:text="@string/login" style="@style/CommonButtonStyle" />
    <TextView android:gravity="center_horizontal" android:id="@id/recovery_textview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/forgot_your_password" style="@style/CommonButtonStyle" />
</LinearLayout>