<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/calendar_root_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:background="@drawable/topbar" android:layout_width="fill_parent" android:layout_height="55.0dip">
        <FrameLayout android:layout_gravity="top|center" android:layout_width="fill_parent" android:layout_height="35.0dip">
            <ImageButton android:layout_gravity="left|center" android:id="@id/calendar_prev_month" android:background="@null" android:layout_width="35.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:src="@drawable/leftarrow" />
            <TextView android:textSize="22.0dip" android:typeface="serif" android:textStyle="bold" android:textColor="#ff3b4958" android:gravity="center" android:layout_gravity="center" android:id="@id/calendar_month_year" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <ImageButton android:layout_gravity="right|center" android:id="@id/calendar_next_month" android:background="@null" android:layout_width="35.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/rightarrow" />
        </FrameLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="bottom|center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="20.0dip">
            <TextView android:textSize="@dimen/small_text_size" android:textColor="#ff000000" android:gravity="center" android:id="@id/calendar_sunday_label_view" android:layout_width="45.0dip" android:layout_height="wrap_content" android:text="@string/calendar_sunday" android:maxLength="3" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/small_text_size" android:textColor="#ff000000" android:gravity="center" android:id="@id/calendar_monday_label_view" android:layout_width="45.0dip" android:layout_height="wrap_content" android:text="@string/calendar_monday" android:maxLength="3" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/small_text_size" android:textColor="#ff000000" android:gravity="center" android:id="@id/calendar_tuesday_label_view" android:layout_width="45.0dip" android:layout_height="wrap_content" android:text="@string/calendar_tuesday" android:maxLength="3" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/small_text_size" android:textColor="#ff000000" android:gravity="center" android:id="@id/calendar_wednesday_label_view" android:layout_width="45.0dip" android:layout_height="wrap_content" android:text="@string/calendar_wednesday" android:maxLength="3" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/small_text_size" android:textColor="#ff000000" android:gravity="center" android:id="@id/calendar_thursday_label_view" android:layout_width="45.0dip" android:layout_height="wrap_content" android:text="@string/calendar_thursday" android:maxLength="3" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/small_text_size" android:textColor="#ff000000" android:gravity="center" android:id="@id/calendar_friday_label_view" android:layout_width="45.0dip" android:layout_height="wrap_content" android:text="@string/calendar_friday" android:maxLength="3" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/small_text_size" android:textColor="#ff000000" android:gravity="center" android:id="@id/calendar_saturday_label_view" android:layout_width="45.0dip" android:layout_height="wrap_content" android:text="@string/calendar_saturday" android:maxLength="3" android:layout_weight="1.0" />
        </LinearLayout>
    </FrameLayout>
    <GridView android:gravity="top" android:layout_gravity="top" android:id="@id/calendar_grid" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:listSelector="@android:color/transparent" android:horizontalSpacing="0.0dip" android:verticalSpacing="0.0dip" android:stretchMode="columnWidth" android:numColumns="7" />
</LinearLayout>