<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="#ffffffff" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textSize="@dimen/ordinary_text_size" android:textColor="#ff000000" android:textColorHighlight="#ff000000" android:gravity="left|center" android:id="@id/name_editview" android:background="#ffffffff" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/footer_bar_height" android:hint="@string/title" />
    <LinearLayout android:orientation="horizontal" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textColor="#ffffffff" android:id="@id/cancel_button" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/cancel" android:layout_weight="1.0" />
        <Button android:textColor="#ffffffff" android:id="@id/save_button" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/save" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>