<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/car_finder_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="12.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:paddingLeft="12.0dip" android:paddingTop="20.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/choose_timer_margin_top">
        <com.biznessapps.widgets.wheel.WheelView android:id="@id/hour" android:layout_width="@dimen/choose_timer_width" android:layout_height="wrap_content" />
        <com.biznessapps.widgets.wheel.WheelView android:id="@id/mins" android:layout_width="@dimen/choose_timer_width" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:paddingLeft="12.0dip" android:paddingTop="20.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:gravity="center_horizontal" android:id="@id/hours_label_view" android:layout_width="@dimen/choose_timer_width" android:layout_height="wrap_content" android:text="@string/hours" style="@style/OrdinaryWhiteText" />
        <TextView android:gravity="center_horizontal" android:id="@id/mins_label_view" android:layout_width="@dimen/choose_timer_width" android:layout_height="wrap_content" android:text="@string/mins" style="@style/OrdinaryWhiteText" />
    </LinearLayout>
    <Button android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/set_timer_button" android:background="@drawable/button_black_src" android:layout_width="@dimen/ordinary_button_width" android:layout_height="@dimen/button_height" android:layout_marginTop="40.0dip" android:text="@string/set_timer" style="@style/OrdinaryText" />
    <Button android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/stop_timer_button" android:background="@drawable/button_black_src" android:layout_width="@dimen/ordinary_button_width" android:layout_height="@dimen/button_height" android:layout_marginTop="30.0dip" android:text="@string/stop_timer" style="@style/OrdinaryText" />
</LinearLayout>