<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:background="#ff000000" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/take_photo_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="9.0dip" android:text="@string/take_photo" style="@style/CommonButtonStyle" />
        <Button android:id="@id/chose_from_library_button" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="9.0dip" android:text="@string/chose_from_library" style="@style/CommonButtonStyle" />
        <Button android:id="@id/email_photo_cancel" android:background="@drawable/default_button_long_spotted" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="15.0dip" android:text="@string/cancel" style="@style/CommonButtonStyle" />
    </LinearLayout>
</ScrollView>